k8s/deployment-v2-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-training-server
  labels:
    app.kubernetes.io/name: k8s-training-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-training-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-training-server
    spec:
      containers:
        - name: k8s-training-server
          image: mondata/kubernetes-training:1.0.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
