k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-training-server
  labels:
    app.kubernetes.io/name: k8s-training-server
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-training-server
